fixed minor layout issues when paginating, increased card text size a bit, retitled Motion post, began on draft for part 1 of Birdu game creation

--- a/source/stylesheets/_global.scss
+++ b/source/stylesheets/_global.scss
@@ -22,10 +22,6 @@ ul {
     }
 }
 
-#disqus_thread {
-    margin: $margin*2 auto;
-}
-
 .card {
     margin: $margin;
     min-width: $card-min-width;
@@ -53,7 +49,7 @@ ul {
     }
 
     .card-content {
-        font-size: 0.5em;
+        font-size: 0.6em;
         border-top: 1px solid #ccc;
         padding: $margin;
         background-color: $off-white;
